<resources>

	<string name="app_name">MoeFM [Prototype]</string>
	<string name="settings">Settings</string>
	<string name="now_playing">Now Playing [Prototype]</string>
	<string name="theme">Theme</string>
	<string name="theme_default">Default</string>
	<string name="theme_sandy">Sandy</string>
	<string name="theme_gray">Gray</string>
	<string name="theme_woody">Woody</string>
	<string name="theme_graphited">Graphited</string>
	<string name="error_occurred">An error occurred, please try again.</string>
	<string name="login">Login</string>
	<string name="logout">Logout</string>
	<string name="logout_confirm">Are you sure to logout?</string>
	<string name="quit">Quit</string>
	<string name="continue_text">Continue</string>
	<string name="network_confirm">You are using mobile network.</string>
	<string name="equalizer">Equalizer</string>

</resources>
